# fun-hypothesis

./: .gitignore  README.md  fun_hypothesis.py  pyproject.toml
.github/workflows/: ci.yml
tests/: __init__.py  test_fun_hypothesis.py
